[package]
name = "codewars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
opt-level = 3
strip = true


[profile.release]
lto = true
codegen-units = 1
strip = true


[dependencies]
num = "*"
rand = "*"
itertools = "*"
